--- a/vod.html
+++ b/vod.html
@@ -1,1 +1,3 @@
-ok
+version https://git-lfs.github.com/spec/v1
+oid sha256:2fee2dd93df0ceacbeaf788427e684ed34be3ab826caffc719ca512c60c1dc85
+size 143862580
