--- a/vod.html
+++ b/vod.html
@@ -1,1 +1,18 @@
-ok
+#EXTINF:-1 type="movie" tvg-id="" tvg-name="John Wick: Chapter 3 - Parabellum (2019)" tvg-logo="https://image.tmdb.org/t/p/w600_and_h900_bestv2/ziEuG1essDuWuC5lpWUaw1uXY2O.jpg" group-title="BLOCKBUSTER ",John Wick: Chapter 3 - Parabellum (2019)
+http://103.161.26.87/test/starshare/stream.php?id=9059.mp4
+#EXTINF:-1 type="movie" tvg-id="" tvg-name="Sadak 2 (2020)" tvg-logo="https://image.tmdb.org/t/p/w600_and_h900_bestv2/9biunspZ5C2A4jNqH693H7PEda0.jpg" group-title="INDIAN FHD (2020)",Sadak 2 (2020)
+http://103.161.26.87/test/starshare/stream.php?id=8654.mkv
+#EXTINF:-1 type="movie" tvg-id="" tvg-name="Khuda Haafiz (2020)" tvg-logo="https://image.tmdb.org/t/p/w600_and_h900_bestv2/jc7rBpjqBmwmjdUgYDk2P3TzOjR.jpg" group-title="INDIAN FHD (2020)",Khuda Haafiz (2020)
+http://103.161.26.87/test/starshare/stream.php?id=7417.mkv
+#EXTINF:-1 type="movie" tvg-id="" tvg-name="Unbroken (2014)" tvg-logo="https://image.tmdb.org/t/p/w600_and_h900_bestv2/vAlHUjHwLWMV5mg4epGR9WSIfiy.jpg" group-title="BLOCKBUSTER ",Unbroken (2014)
+http://103.161.26.87/test/starshare/stream.php?id=7272.mkv
+#EXTINF:-1 type="movie" tvg-id="" tvg-name="K.G.F: Chapter 1 (2018)" tvg-logo="https://image.tmdb.org/t/p/w600_and_h900_bestv2/ltHlJwvxKv7d0ooCiKSAvfwV9tX.jpg" group-title="INDIAN",K.G.F: Chapter 1 (2018)
+http://103.161.26.87/test/starshare/stream.php?id=6632.mp4
+#EXTINF:-1 type="movie" tvg-id="" tvg-name="Kabir Singh (2019)" tvg-logo="https://image.tmdb.org/t/p/w600_and_h900_bestv2/2J1FLlFnT3gxsiXnC5mTNtLM9ol.jpg" group-title="INDIAN",Kabir Singh (2019)
+http://103.161.26.87/test/starshare/stream.php?id=1906.mkv
+#EXTINF:-1 type="movie" tvg-id="" tvg-name="Chitralahari (2019)" tvg-logo="https://image.tmdb.org/t/p/w600_and_h900_bestv2/kEHLIp2wOmHGRKCS26JKKClbGNH.jpg" group-title="INDIAN",Chitralahari (2019)
+http://103.161.26.87/test/starshare/stream.php?id=1891.mp4
+#EXTINF:-1 type="movie" tvg-id="" tvg-name="Boomerang (2019)" tvg-logo="https://image.tmdb.org/t/p/w600_and_h900_bestv2/j2xBTyW17VkNGNQGNMjscOEWExo.jpg" group-title="INDIAN",Boomerang (2019)
+http://103.161.26.87/test/starshare/stream.php?id=1888.mp4
+#EXTINF:-1 type="movie" tvg-id="" tvg-name="Countdown (2019)" tvg-logo="https://image.tmdb.org/t/p/w600_and_h900_bestv2/qCDPKUMX5xrxxQY8XhGVCKO3fks.jpg" group-title="BLOCKBUSTER ",Countdown (2019)
+http://103.161.26.87/test/starshare/stream.php?id=1862.mp4
